# programing-C

1_rocnik_zimny_skuska/: 1_rocnik_zimny_skuska.mk  1_rocnik_zimny_skuska.project  compile_flags.txt  main.c
Binarni_strom_mazani_uzlu/: Binarni_strom_mazani_uzlu.mk  Binarni_strom_mazani_uzlu.project  compile_flags.txt  main.c
Binarni_vyhledavaci_strom/: Binarni_vyhledavaci_strom.mk  Binarni_vyhledavaci_strom.project  compile_flags.txt  main.c
Ukol_11_mealy_automat/: CMakeLists.txt  README.md  Ukol_11_mealy_automat.mk  Ukol_11_mealy_automat.project  compile_flags.txt  main.c
Ukol_1_Csv/: Ukol_1_Csv.mk  Ukol_1_Csv.project  compile_flags.txt  main.c
Ukol_2_kombinace_hracu/: Ukol_2_kombinace_hracu.mk  Ukol_2_kombinace_hracu.project  compile_flags.txt  main.c
Ukol_4_tel_seznam/: Ukol_4_tel_seznam.mk  Ukol_4_tel_seznam.project  compile_flags.txt  main.c
Ukol_5-knihovna/: Ukol_5-knihovna.mk  Ukol_5-knihovna.project  Ukol_5-knihovna.txt  compile_flags.txt  fce.c  fce.h  ioutils.c
Ukol_6_vector/: CMakeLists.txt  README.md  Ukol_6_vector.mk  Ukol_6_vector.project  Ukol_6_vector.txt  compile_flags.txt  ioutils.c  ioutils.h  main.c  mymalloc.h  task6.qbs  test_git.txt  vector.c  (+1 more)
Ukol_8_adt_smaz_seznam/: CMakeLists.txt  README.md  Ukol_8_adt_prunik.mk  Ukol_8_adt_prunik.project  Ukol_8_adt_prunik.txt  Ukol_8_adt_smaz_seznam.mk  Ukol_8_adt_smaz_seznam.project  Ukol_8_adt_smaz_seznam.txt  Ukol_8_adt_zkouska.project  Ukol_8_adt_zkouska.txt  compile_flags.txt  data.h  ioutils.c  list.c  main.c
Ukol_8_adt_smaz_seznam/testFiles/: output1.txt  output2.txt  output3.txt
(+122 files in other folders)
